* 2013-09-17 - thorben.betten@open-xchange.com

 - Fix for bug 28885: Null guard for possibly absent confirm status
 - Fix for bug 28883: Deal with (temporary) absent Hazelcast service
 - Fix for bug 28882: Improved handling for bad configured "MAX_UPLOAD_SIZE" property in 'server.properties'

* 2013-09-16 - thorben.betten@open-xchange.com

 - Fix for bug 28857: Orderly signal Snippet identifiers
 - Fix for bug 28875: Avoid possible 'ArrayIndexOutOfBoundsException' when parsing "From" address
 - Fix for bug 28865: Increased log level for org.jaudiotagger.*

* 2013-09-15 - thorben.betten@open-xchange.com

 - Fix for bug 27882: Remove the "name" parameter from an attachment's "Content-Type" header
 - Fix for bug 27959: Lowered log level to "DEBUG" in case an already removed session is supposed to be refreshed/touched
 - Fix for bug 28082: Recover from "Unsupported Image Type" javax.imageio.IIOException

* 2013-09-13 - thorben.betten@open-xchange.com

 - Fix for bug 28683: Removed Exception.printStackTrace() invocation

* 2013-09-13 - marcus.klein@open-xchange.com

 - Fix for bug 28089: Use the same database connection to delete the reminder of the task.

* 2013-09-12 - thorben.betten@open-xchange.com

 - Fix for bug 28828: Consider string length when iterating over its characters
 - Fix for bug 28829: Added null guard when closing IMAP connection

* 2013-09-10 - thorben.betten@open-xchange.com

 - Fix for bug 28786: Honor possibly absent service during runtime
 - Fix for bug 28741: Orderly close opened 'Base64OutputStream'
 
* 2013-09-10 - martin.schneider@open-xchange.com
 
 - Fix for bug 28759, start parsing css with correct matched character

* 2013-09-09 - martin.schneider@open-xchange.com

 - Fix for bug 28261: Command line tool 'createcontext' returns proper information if 'user' parameter is set inadequate.
 - Fix for bug 26693: Return clear error message when folder name is too long.

* 2013-09-09 - thorben.betten@open-xchange.com
